--- a/Wearable/src/main/res/drawable/settings_watch_face_preview_background.xml
+++ b/Wearable/src/main/res/drawable/settings_watch_face_preview_background.xml
@@ -14,9 +14,10 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<!-- 시계의 모양을 변경할 수 있는 소스 -->
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle"> <!-- android:shape="자신이 원하는 모양"-->
     <solid
-        android:color="@color/white"/>
+        android:color="@color/white"/> <!-- android:color="@color/자신이 원하는 색갈-->
 </shape>
