--- a/Wearable/src/main/res/layout/activity_analog_complication_config.xml
+++ b/Wearable/src/main/res/layout/activity_analog_complication_config.xml
@@ -14,6 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<!-- 시계 뒷 배경에 원하는 사진 이나 색을 변경하거나 추가 할 수 있는 소스-->
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
