시계모양 안에 사진을 넣을려고 소스를 바꿨지만 preview에서는 원안에 강아지 사진이 들어가있는 상태가 되었지만 실행 하였을때는 실패

--- a/Wearable/src/main/res/drawable/settings_watch_face_preview_background.xml
+++ b/Wearable/src/main/res/drawable/settings_watch_face_preview_background.xml
@@ -15,9 +15,16 @@
   ~ limitations under the License.
   -->
 <!-- 시계의 모양을 변경할 수 있는 소스 -->
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"> <!-- android:shape="자신이 원하는 모양"-->
-    <solid
-        android:color="@color/white"/> <!-- android:color="@color/자신이 원하는 색갈-->
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/white"/>
+        </shape>
+    </item>
+    <item
+        android:drawable="@drawable/bg"
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp"/>
+</layer-list>
