--- a/Wearable/src/main/res/layout/activity_analog_complication_config.xml
+++ b/Wearable/src/main/res/layout/activity_analog_complication_config.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:color="@color/dark_grey"
     android:paddingStart="@dimen/activity_config_padding"
     android:paddingEnd="@dimen/activity_config_padding">
     <android.support.wear.widget.WearableRecyclerView
